[tool.poetry]
name = "pinboard-queue"
version = "0.1.0"
description = ""
authors = ["Simon Lundström <github-commits@soy.se>"]
homepage = "https://github.com/simmel/pinboard-queue"
include = ["pinboard_post.capnp"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
pika = "^1.2.0"
pycapnp = "^1.0.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
pylint = "^2.6.0"
black = "^20.8b1"
tox = "^3.24.3"

[tool.poetry.scripts]
pinboard-queue = 'pinboard_queue:main'


# FIXME Maybe:
# * https://pypi.org/project/tox-poetry-dev-dependencies/
# * https://github.com/python-poetry/poetry/pull/2416
[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
whitelist_externals = poetry
envlist = py,typing

[testenv]
commands_pre =
    poetry install

[testenv:typing]
commands =
    poetry run python3 -m mypy .
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
