[tool.poetry]
name = "pinboard-queue"
version = "0.1.0"
description = ""
authors = ["Simon Lundström <github-commits@soy.se>"]
homepage = "https://github.com/simmel/pinboard-queue"
include = ["pinboard_post.capnp"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.0"
pika = "^1.2.0"
pycapnp = "^1.0.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.900"
pylint = "^2.6.0"
black = "^20.8b1"
nox = "^2021.6.12"
types-pkg-resources = "^0.1.3"
types-requests = "^2.25.6"

[tool.poetry.scripts]
pinboard-queue = 'pinboard_queue:main'

[tool.mypy]
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    'tests.*',
    'noxfile',
]
ignore_errors = true

[tool.pylint]
    [tool.pylint.master]
    disable= [
        'missing-docstring',
        'W',
        'R',
        ]

    output-format = 'parseable'
    ignored-modules='capnp'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
