[tool.poetry]
name = "pinboard-queue"
version = "1.4.1"
description = ""
authors = ["Simon Lundström <github-commits@soy.se>"]
homepage = "https://github.com/simmel/pinboard-queue"
include = ["pinboard_post.capnp"]
packages = [
    { include = "pinboard_queue.py" },
    { include = "sanitize_url.py" },
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.0"
pika = "^1.2.0"
pycapnp = "^1.0.0"
requests = "^2.24.0"
importlib-metadata = {version = "^1.4.0", python = "<3.8"}
wrapt = "^1.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mypy = "^0.900"
pylint = "^2.6.0"
black = "^22.1.0"
nox = "^2023.1"
types-requests = "^2.25.6"

[tool.poetry.scripts]
pinboard-queue = 'pinboard_queue:cli'

[tool.mypy]
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    'tests.*',
    'noxfile',
]
ignore_errors = true

[tool.pylint]
    [tool.pylint.master]
    disable= [
        'missing-docstring',
        'consider-using-f-string',
        'invalid-name',
        'W',
        'R',
        ]

    output-format = 'parseable'
    ignored-modules='capnp'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
